# patrole

./: .coveragerc  .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  REVIEWING.rst  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test-whitelist.txt  tox.ini
contrib/: post_test_hook.sh  pre_test_hook.sh
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: HACKING.rst  REVIEWING.rst  conf.py  configuration.rst  index.rst  installation.rst  multi-policy-validation.rst  overview.rst  rbac-overview.rst  rbac_validation.rst  sampleconf.rst  test_writing_guide.rst  testing.rst  usage.rst
doc/source/contributor/: contributing.rst
doc/source/field_guide/: index.rst  rbac.rst
doc/source/framework/: overview.rst  policy_authority.rst  rbac_authority.rst  rbac_utils.rst  rbac_validation.rst  requirements_authority.rst
etc/: config-generator.patrole.conf  patrole.conf.sample
patrole_tempest_plugin/: README.rst  config.py  plugin.py  policy_authority.py  rbac_auth.py  rbac_authority.py  rbac_exceptions.py  rbac_policy_parser.py  rbac_role_converter.py  rbac_rule_validation.py  rbac_utils.py  requirements_authority.py  version.py
patrole_tempest_plugin/hacking/: checks.py
patrole_tempest_plugin/tests/api/: README.rst  (+1 more)
playbooks/patrole-multinode-member/: run.yaml
releasenotes/notes/: 0.1.0-pike-6590a2996b7c06d6.yaml  add-extra-hypervisor-tests-9374e5fcdb0266e2.yaml  add-force-delete-backup-test-7e896affd1471328.yaml  add-metadef-resource-type-7973621c5e8fff7f.yaml  add-neutron-tempest-plugin-clients-c031e232021b390c.yaml  add-quota-classes-tests-3e61e671f6e131df.yaml  add-security-group-tests-ae5c07074e0ac849.yaml  additional-network-ports-rbac-tests-3f48ce1b6bda7694.yaml  additional-router-rbac-tests-66ef013c54016326.yaml  admin-only-identity-v2-admin-6f382e38d7a690a4.yaml  adopt_nova_new_policies-c61d1c3751ff1bf9.yaml  agents-ca4a5e232ce242a5.yaml  backup-project-attribute-test-504f053c6ec95b85.yaml  backwards-incompatible-rule-feature-flag-ebe8b44c0aa663a8.yaml  break-up-rbac-malformed-exception-into-discrete-exceptions-92aedb99d0a13f58.yaml  changed-cinder-policies-xena-feature-flag-4b799db683e2840f.yaml  changed-nova-policies-victoria-7a5f123238b099d9.yaml  changed_nova_policies_ussuri-177582b3ded63411.yaml  check-expected-errors-only-in-override-role-f7109a73f5ff70e2.yaml  communitize-image-rbac-test-bdf1109e58a6c2e0.yaml  compute-snapshots-tests-86c137eb545707ee.yaml  config-opts-paths-01e2a5096a1579b8.yaml  console-6db96c4e329c0ab2.yaml  deprecate-enable-rbac-option-1e499bb0914cdee8.yaml  deprecate-rbac-group-148e222913dc74cc.yaml  deprecate-rbac-utils-switch-role-a959f7bb3ebab353.yaml  deprecate-roles-client-in-rbac-utils-087eda0658d18fa9.yaml  deprecate-strict-policy-enforce-option-e15d2be4e753608e.yaml  dhcp-agent-scheduler-test-842fc1df45799def.yaml  domain-config-rbac-tests-8806ca7c159ddf94.yaml  drop-py-2-7-d287ad9a325b132d.yaml  dynamic-policy-file-discovery-104cbfc64b55d605.yaml  encryption-types-c9a2d9a3c1996da4.yaml  end-of-support-for-stein-8b93f530ae9b7331.yaml  endpoint-filter-projects-7f64c88659ef0c30.yaml  ep-filter-groups-rbac-tests-bca28e9a055bbb8d.yaml  extended-availability-zone-policies-2ec19e8bbb9ce158.yaml  extended-server-attributes-36623af87e714369.yaml  extra-volume-types-tests-2e4538bed7348be4.yaml  flavor-manage-rbac-tests-eb78439316d67ab2.yaml  (+66 more)
releasenotes/source/: conf.py  index.rst  v0.1.0.rst  v0.10.0.rst  v0.11.0.rst  v0.12.0.rst  v0.13.0.rst  v0.2.0.rst  v0.3.0.rst  v0.4.0.rst  v0.5.0.rst  v0.6.0.rst  v0.7.0.rst  v0.8.0.rst  v0.9.0.rst
tests/: base.py  test_patrole.py  test_rbac_role_converter.py  test_rbac_rule_validation.py  test_rbac_utils.py
tests/resources/: alt_admin_rbac_policy.json
(+196 files in other folders)
