[metadata]
name = patrole
summary = Patrole is a tool for verifying that Role-Based Access Control is being enforced across OpenStack deployments.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/patrole/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    patrole_tempest_plugin

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
tempest.test_plugins =
    patrole_tests = patrole_tempest_plugin.plugin:PatroleTempestPlugin
oslo.config.opts =
    patrole.config = patrole_tempest_plugin.config:list_opts
