[metadata]
name = patrole
summary = Patrole is a tool for verifying that Role-Based Access Control is being enforced across OpenStack deployments.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/patrole/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    patrole_tempest_plugin

[entry_points]
tempest.test_plugins =
    patrole_tests = patrole_tempest_plugin.plugin:PatroleTempestPlugin
oslo.config.opts =
    patrole.config = patrole_tempest_plugin.config:list_opts
